<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_first_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_last_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/et_country"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/country" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:textStyle="bold"
        android:background="@drawable/button_login"
        android:layout_below="@+id/et_country"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register" />


</RelativeLayout>